src-ken&y/objects/Concurrency_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for controlling users concurrent page and event access</description>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>API name of the object that holds the record being checked for concurrency</description>
        <inlineHelpText>API name of the object that holds the record being checked for concurrency</inlineHelpText>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>The time in seconds that the user has access to the page.</description>
        <inlineHelpText>The time in seconds that the user has access to the page.</inlineHelpText>
        <label>Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timestamp_Field__c</fullName>
        <description>API name of the field that holds the timestamp being checked for concurrency</description>
        <inlineHelpText>API name of the field that holds the timestamp being checked for concurrency</inlineHelpText>
        <label>Timestamp Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Field__c</fullName>
        <description>API name of the field that holds the user ID being checked for concurrency</description>
        <inlineHelpText>API name of the field that holds the user ID being checked for concurrency</inlineHelpText>
        <label>User Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Concurrency Configuration</label>
</CustomObject>